updated portfolio added favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Steve Tatton's Portfolio</title>
+
+        <link rel="icon" type="image/x-icon" href="./assets/img/avataaars.svg">
     
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -135,8 +137,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Originally from Ohio, I moved to NYC in 2020. I enjoy coding, gaming and spending time with my fiance and our dog.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">I'm always looking to learn new things, meet interesting people and take a look from a different perspective!</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Originally from North-East Ohio, I moved to NYC in 2020. When COVID hit I began the process of transitioning my career from hospitality management to coding. In my spare time I enjoy reading tech blogs, gaming and spending time with my fiance and our dog.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">I'm an inquisitive person, always learning new things, meeting interesting people and looking for new perspective. I'm always on tinkering with a new project and can be found most nights at my computer, wrapping my head around new concepts and features.</p></div>
                 </div>
                 <!-- About Section Button-->
             </div>
